source/style.css
body {
    background: #f8f8f8;
    font-family: Arial, sans-serif;
    font-weight: bold;
    font-family: 'Oswald', sans-serif;
    margin: 0;
    padding: 0;
  }

.left-sidenav{
    width: 20%;
    height: 100%;
    display: block;
    position: fixed;
    background: #1270a7;
    overflow-y: scroll;
    background-image: linear-gradient(to bottom right, #1270a7, darkblue);
}

.right-sidenav{
    margin-left: 80%;
    width: 20%;
    background: #1270a7;
    height: 100%;
    display: inline-block;
    position: absolute;
    overflow-y: scroll;
    background-image: linear-gradient(to bottom right, #1270a7, darkblue);
}

.top-navbar{
    height: 5%;
    background: #898427;
    display: flex;
}

.username{
    width: 20%;
    height: 100%;
    display: inline-flex;
    align-items: center;
    justify-content: flex-start;
}

.balance{
    width: 60%;
    height: 100%;
    display: inline-flex;
    justify-content: center;
    align-items: center; 
}

.level{
    width: 20%;
    height: 100%;
    display: inline-flex;
    align-items: center;
    justify-content: flex-end;
}

.textName{
    margin-left: 1rem;
}

.balanceText{
    font-size: 30px;
}

.levelText{
    margin-right: 1rem;
}

.mainGame{
    margin-left: 20%;
    width: 60%;
    background: #f8f8f8;
    height: 100%;
    display: inline-block;
    position: absolute;
}

.clickArea{
    position: inline-flex;
    height: 95%;
}

.clickImage{
    font-size: 1px;
}

.upgradeButton {
	background-color:#74ad5a;
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
	border-radius:4px;
	border:1px solid black;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Verdana;
	font-size:13px;
	font-weight:bold;
	padding:6px 12px;
    text-decoration:none;
}
.upgradeButton:hover { 
    background: -moz-linear-gradient(top, #68a54b 5%, #74ad5a 100%);
	background: -webkit-linear-gradient(top, #68a54b 5%, #74ad5a 100%);
	background:-o-linear-gradient(top, #68a54b 5%, #74ad5a 100%);
	background:-ms-linear-gradient(top, #68a54b 5%, #74ad5a 100%);
	background:linear-gradient(to bottom, #68a54b 5%, #74ad5a 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#68a54b', endColorstr='#74ad5a',GradientType=0);
	background-color:#68a54b;
}
.upgradeButton:active {
	position:relative;
	top:1px;
}

.followerCard{
    border-style: solid;
    border-width: 2px;
    margin: 7px;
    margin-bottom: 8px;
    box-shadow: 1px 1px 3px black;
    display: flex;
    background-image: linear-gradient(to bottom right, red, yellow);
}

.unavailableUpgrade{
    background-color:gray;
    -moz-border-radius:4px;
    -webkit-border-radius:4px;
    border-radius:4px;
    border:1px solid black;
    display:inline-block;
    cursor:pointer;
    color:black;
    font-family:Verdana;
    font-size:13px;
    font-weight:bold;
    padding:6px 12px;
    text-decoration:none;
}

.upgrade{
    justify-content: right;
    align-items: right; 
}

.avatarContainer{
    width: 33.3%;
    height: 100%;
    margin: 3px;
}

.avatar{
    max-width: 100%;
    max-height: 100%;
    display: block;
    border-style: solid;
    border-width: 1px;
}

.followerInfoBox{
    width: 33.3%;
    height: 100%;
    margin: 3px;
}

.followerLevelBox{
    width: 33.3%;
    height: 100%;
    margin: 3px;
}

.levelInfo{
    font-size: 15px;
}

